package dev.kaldiroglu.dp.creational.ch02.factoryMethod.solution.company.fm2;

public interface Factory {
	
	public Employee create(String name);

}
