package dev.kaldiroglu.dp.creational.ch02.factoryMethod.solution.company.fm3;

public interface DirectorFactory{

	public Director create(String name, String workingDepartment, int bonus);

}
